# Object-Oriented-Programming

Labs/ExtraCredit_Lab8 - World Puzzle/: b8.sln
Labs/ExtraCredit_Lab8 - World Puzzle/b8/: Puzzle.h  b8.vcxproj.filters
Labs/Final Project/: CMakeLists.txt  action.h  actionadd.cpp  actionadd.h  actiondelete.cpp  actiondelete.h  filerepository.cpp  filerepository.h  filerepositorytest.cpp  filerepositorytest.h  main.cpp  mainwindow.cpp  mainwindow.h  milestone_project.pro  milestone_project.pro.user.d1d8a7b  playlist.cpp  playlist.h  repository.cpp  repository.h  repositorytest.cpp  repositorytest.h  song.cpp  song.h  songcontroller.cpp  songcontroller.h  songcontrollertest.cpp  songcontrollertest.h  songexception.cpp  songexception.h  songs.txt
Labs/Image processing app/: Image_processing_app.sln
Labs/Image processing app/Image processing app/: BrightnessAndContrast.cpp  BrightnessAndContrast.h  Credit_Lab4.vcxproj  Credit_Lab4.vcxproj.filters  GammaCorrection.cpp  GammaCorrection.h  ImageConvultion.cpp  ImageConvultion.h  ImageProcessing.h  ImageTest.cpp  ImageTest.h  RectangleTest.cpp  RectangleTest.h  SizeTest.cpp  SizeTest.h  drawing.cpp  image.cpp  image.h  main.cpp  point.cpp  point.h  pointTest.cpp  pointTest.h  rectangle.cpp  rectangle.h  sample1_out1.pgm  sample1_out2.pgm  sample1_out3_circle.pgm  sample1_out3_circle_line.pgm  sample1_out3_circle_line_rectangle.pgm  size.cpp  size.h  test_dwsample-pgm-640.pgm  test_dwsample-pgm-640_circle_line.pgm
Labs/Lab1/: Laboratory1.sln
Labs/Lab10/: Lab_10.sln
Labs/Lab5/: OOPLaboratory5.sln
(+166 files in other folders)
